Latest fixes.